<resources>
    <string name="app_name">Next Train</string>
    <string name="home_journeys">Journeys</string>
    <string name="home_livetrains">Live Trains</string>
    <string name="home_profile">Profile</string>
    <string name="frag_journeys_fab_newjourney">New Journey</string>
    <string name="building_database">Building Stations Database...</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Settings activity strings -->
    <string name="pref_category_notifications">Notifications</string>
    <string name="pref_category_general">General</string>
    <string name="pref_category_developer">Developer Options</string>
    <string name="pref_db_forceRebuild">Rebuild Database</string>
    <string name="title_activity_station_search">StationSearchActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="searchStations">Search Stations</string>

    <string name="stationActvity_menu_stationAbout">About</string>
    <string name="stationActvity_menu_stationFilter">Filter</string>
    <string name="stationActvity_menu_stationFavourite">Favourite</string>
    <string name="stationActvity_menu_stationTimeOffset">Time Offset</string>

    <string name="menu_refresh">Refresh</string>

    <string name="fragment_stationActivity_listServices_noServiceDepartures">No Services from this station at this time</string>
    <string name="fragment_stationActivity_listServices_noServiceArrivals">No Services to this station at this time</string>
    <string name="fragment_stationActivity_listServices_unableToFetch">Could not fetch any services for this station</string>
    <string name="title_activity_service_detail">serviceDetailActivity</string>
    <string name="activity_service_detail_serviceLoadError">Could not load this service</string>
    <string name="activity_service_detail_menu_addJourney">Add Journey</string>
    <string name="activity_service_detail_menu_operatorDetails">Operator Details</string>
    <string name="activity_service_detail_menu_notifications">Notifications</string>



</resources>