<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/serviceDetail_menu_addJourney"
        android:icon="@drawable/ic_baseline_add_24"
        android:title="@string/activity_service_detail_menu_addJourney"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/serviceDetail_menu_operatorDetails"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/activity_service_detail_menu_operatorDetails"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/serviceDetail_menu_notifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        android:title="@string/activity_service_detail_menu_notifications"
        app:showAsAction="ifRoom" />
</menu>